# litepali

./: .gitignore  .pre-commit-config.yaml  CNAME  LICENSE  README.md  _config.yml  pyproject.toml
examples/: convert_pdf_to_images.ipynb  rag_example.ipynb
pages/: about.md  documentation.md
src/litepali/: __init__.py  model.py
