[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litepali"
version = "0.0.3"
description = "Lightweight ColPali-based retrieval for cloud"
readme = "README.md"
authors = [{ name = "Simeon Emanuilov", email = "simeon.emanuilov@gmail.com" }]
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "colpali",
    "image retrieval",
    "rag",
    "semantic search",
    "vision-language-models",
    "document-ai",
    "multi-modal",
    "information retrieval",
    "machine learning",
    "cloud-optimized",
]
dependencies = [
    "colpali-engine>=0.3.0,<0.4.0",
]

[project.urls]
"Homepage" = "https://github.com/s-emanuilov/litepali"
"Website" = "https://litepali.com"
"Bug Tracker" = "https://github.com/s-emanuilov/litepali/issues"


[tool.ruff]
lint.select = ["E", "F"]
lint.ignore = []

lint.fixable = ["A", "B", "C", "D", "E", "F"]
lint.unfixable = []

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 110

lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py310"

[tool.ruff.lint.mccabe]
max-complexity = 10
